--- a/Mapping_GeoJSON_Points/index.html
+++ b/Mapping_GeoJSON_Points/index.html
@@ -10,6 +10,8 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
 integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
 crossorigin=""/>
+<!-- d3 JavaScript -->
+<script src="https://d3js.org/d3.v5.min.js"></script>
 <!-- CSS -->
 <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
